# booknest

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  api_documentation.md  pyproject.toml  requirements.txt  schema.sql  seed.py  start_server.sh
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  books.py  dashboard.py  lending.py  sharing.py  shelves.py  websockets.py
backend/app/core/: activity.py  config.py  database.py  dependencies.py  jwt_handler.py  permissions.py
backend/app/crud/: __init__.py  base.py  crud_book.py  crud_lending.py  crud_sharing.py  crud_shelf.py
backend/app/models/: __init__.py  activity.py  associations.py  book.py  lending.py  sharing.py  shelf.py
backend/app/schemas/: __init__.py  book.py  lending.py  sharing.py  shelf.py  user.py
backend/tests/: test_api.py  test_api2.py  test_api3.py  test_auth.py  test_db.py  test_db2.py  test_hash.py  test_integration.py  test_shares.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ConfirmModal.jsx  Layout.jsx
frontend/src/context/: AuthContext.jsx  WebSocketContext.jsx
frontend/src/pages/: Books.jsx  Borrowed.jsx  Dashboard.jsx  Login.jsx  Register.jsx  ShelfDetails.jsx  Shelves.jsx  Signup.jsx
